# fastapi_example

./: README.md  pyproject.toml
app/: config.py  database.py  main.py
app/dao/: base.py
app/migration/: env.py
app/migration/versions/: 8e0ff5d6ba1a_user.py  d215a39b7173_initial.py
app/users/: dao.py  models.py  router.py  schemas.py
